--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+#root > [data-reactroot] {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
