--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.flex-container-centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
