--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home-blurb {
   font-size: 1.2em;
-  width: 60%;
+  width: 65%;
   text-align: center;
   line-height: 1.8em;
 }
@@ -8,4 +8,9 @@
 .icon-link {
   height: 50px;
   margin: 1em;
+  transition: fill .2s;
+}
+
+.icon-link:hover {
+  fill: #607D8B;
 }
