--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
 
 .flex-container-centered {
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
@@ -24,4 +23,10 @@ a {
 
 a:hover {
   color: #37474F;
+}
+
+.card {
+  background-color: #eee;
+  border-radius: 2px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
