New prettier settings. Other WIP stuff

--- a/src/index.css
+++ b/src/index.css
@@ -18,15 +18,13 @@ body {
 a {
   color: #607D8B;
   text-decoration: none;
-  transition: color .2s
+  transition: color .2s;
 }
 
 a:hover {
   color: #37474F;
 }
 
-.card {
-  background-color: #eee;
-  border-radius: 2px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+.section-title {
+  font-weight: normal;
 }
