--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,13 +1,17 @@
 .icon-links {
-  text-align: center; }
+  text-align: center;
+}
 
 .icon-link {
   height: 35px;
   margin: 1em;
-  transition: fill .2s; }
+  transition: fill .2s;
+}
 
 .icon-link:hover {
-  fill: #607D8B; }
+  fill: #607D8B;
+}
 
 .home-blurb {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+}
