--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,18 @@
   font-size: 1.5em; }
 
 .navbar a {
-  color: #ECEFF4 !important; }
+  color: #ECEFF4; }
 
 .navbar a:hover {
-  color: #ECEFF4 !important;
-  background-color: #3B4252 !important; }
+  color: #ECEFF4;
+  background-color: #3B4252; }
 
 .navbar {
-  background-color: #2E3440 !important;
+  background-color: #2E3440;
   border-bottom: 1px solid #D8DEE9; }
+
+.navbar-burger:hover {
+  background-color: #2E3440; }
+
+.navbar-burger span {
+  background-color: #D8DEE9; }
