--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,3 +1,5 @@
+@import "../../lib/nord.scss";
+
 .icon-links {
   text-align: center;
 }
@@ -9,7 +11,7 @@
 }
 
 .icon-link:hover {
-  fill: #607D8B;
+  fill: $nord10;
 }
 
 .home-blurb {
