--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -17,3 +17,11 @@
 .home-blurb {
   font-size: 1.2em;
 }
+
+.skills-container {
+  margin-top: 2em;
+}
+
+.skillcards-container {
+  margin-top: 1em;
+}
