Tons of styline changes

--- a/src/components/IconLinks/IconLinks.css
+++ b/src/components/IconLinks/IconLinks.css
@@ -1,13 +1,10 @@
-.icon-links {
-  text-align: center;
-}
-
 .icon-link {
   height: 35px;
-  margin: 1em;
   transition: fill .2s;
+  margin: 0 .5em;
+  fill: white;
 }
 
 .icon-link:hover {
-  fill: #5E81AC;
+  fill: slategray;
 }
